fix: styles, variables es5, grunt file

--- a/Product/teste.html
+++ b/Product/teste.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>Document</title>
-    <meta name="viewport" content="width=device-width, user-scalable=no" />
-  </head>
-  <body>
-    <!-- <script id="dt-widget" src="widget.js"></script> -->
-    <script
-      id="dt-widget"
-      src="https://www7.directtalk.com.br/clientes/custom/Product/widget.min.js"
-    ></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Document</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no" />
+</head>
+
+<body>
+  <script id="dt-widget" src="widget.js"></script>
+  <!-- <script id="dt-widget" src="https://www7.directtalk.com.br/clientes/custom/Product/widget.min.js"></script> -->
+</body>
+
 </html>
